@@ -193,7 +193,7 @@ D  "rungs -q -dNOPAUSE -dBATCH -dEPSCrop -sDEVICE=pdfwrite -dCompatibilityLevel=
 %% Image cache life in hours
 %%  0 means erase all old images and leave new images
 %% -1 means erase all old images and also erase new images
-I -1
+%I -1
 
 %% Font Map Files
 %%
@@ -207,7 +207,7 @@ f  pdftex.map
 %% MiKTeX 2.2 and 2.3
 %f psfonts.map
 
-%% Put additonal fontmap files here (usually for Type0 fonts)
+%% Put additional fontmap files here (usually for Type0 fonts)
 %f  cid-x.map
 
 % the following file is generated by updmap(-sys) from the 
