@@ -2,7 +2,7 @@
     
     This is DVIPDFMx, an eXtended version of DVIPDFM by Mark A. Wicks.
 
-    Copyright (C) 2009-2012 by Jin-Hwan Cho, Matthias Franz, and Shunsaku Hirata,
+    Copyright (C) 2009-2013 by Jin-Hwan Cho, Matthias Franz, and Shunsaku Hirata,
     the dvipdfmx project team.
     
     Copyright (C) 1998, 1999 by Mark A. Wicks <mwicks@kettering.edu>
@@ -89,7 +89,7 @@ static int pdfdecimaldigits = 2;
 /* Image cache life in hours */
 /*  0 means erase all old images and leave new images */
 /* -1 means erase all old images and also erase new images */
-static int image_cache_life = 48;
+static int image_cache_life = -1;
 
 /* Encryption */
 static int do_encryption    = 0;
@@ -146,7 +146,7 @@ show_version (void)
   fprintf(stdout, "\nThis is %s-%s by the DVIPDFMx project team,\n", PACKAGE, VERSION);
   fprintf(stdout, "modified for TeX Live,\n");
   fprintf(stdout, "an extended version of dvipdfm-0.13.2c developed by Mark A. Wicks.\n");
-  fprintf(stdout, "\nCopyright (C) 2002-2012 by the DVIPDFMx project team\n");
+  fprintf(stdout, "\nCopyright (C) 2002-2013 by the DVIPDFMx project team\n");
   fprintf(stdout, "\nThis is free software; you can redistribute it and/or modify\n");
   fprintf(stdout, "it under the terms of the GNU General Public License as published by\n");
   fprintf(stdout, "the Free Software Foundation; either version 2 of the License, or\n");
@@ -186,7 +186,7 @@ show_usage (void)
   fprintf(stdout, "\t\tAnd negative values replace old values.\n");
   fprintf(stdout, "-D template\tPS->PDF conversion command line template [none]\n");
   fprintf(stdout, "-E \t\tEnable DVIPDFM emulation mode\n");
-  fprintf(stdout, "-I number\tImage cache life in hours [48]\n");
+  fprintf(stdout, "-I number\tImage cache life in hours [-1]\n");
   fprintf(stdout, "         \t 0: erase all old images and leave new images\n");
   fprintf(stdout, "         \t-1: erase all old images and also erase new images\n");
   fprintf(stdout, "-K number\tEncryption key length [40]\n");
@@ -539,7 +539,7 @@ do_args (int argc, char *argv[])
         break;
       case 'I':
         CHECK_ARG(1, "image cache life in hours");
-        image_cache_life = (unsigned) atoi(argv[1]);
+        image_cache_life = atoi(argv[1]);
         POP_ARG();
         break;
       case 'S':
@@ -613,7 +613,7 @@ do_args (int argc, char *argv[])
   } else if (argc > 0) {
     /*
      * The only legitimate way to have argc == 0 here is
-     * is do_args was called from config file.  In that case, there is
+     * do_args was called from config file.  In that case, there is
      * no dvi file name.  Check for that case .
      */
     if (!mp_mode && STRN_CMP(".dvi", argv[0] + strlen(argv[0]) - 4, 4)) {
