@@ -1,4 +1,4 @@
-%% dvipdfmx.cfg for dvipdfmx.  (Public domain.)
+%% dvipdfmx.cfg for dvipdfmx and xdvipdfmx.  (Public domain.)
 %%
 %% PDF Version Setting
 %%
@@ -129,13 +129,10 @@ P  0x003C
 %% encoded images (which is possible in PS level 2), then these images
 %% will also be re-encoded using Flate. To turn the conversion off,
 %% simply remove the options mentioned above.
-%%
-%% Also note that PAPERSIZE=a0 is specified below. This converts PS
-%% files (including EPS) to A0 papersize PDF. This is necessary to
-%% prevent gs from clipping PS figure at some papersize. (A0 above
-%% simply means large size paper.) If you have figures even larger
-%% than A0, and their llx=lly=0, you can use "-dEPSCrop" instead of
-%% "-sPAPERSIZE=a0"
+%% 
+%% The -dEPSCROP below converts PS files.  Before TL 2013,
+%% -sPAPERSIZE=a0 was used for this.  In 2013, changes were made to
+%% xetex.def, dvipdfmx.def, etc., to handle non-zero llx/lly.
 %%
 %% In TeX Live, we use the rungs wrapper instead of ps2pdf, becuse we
 %% must omit the -dSAFER which ps2pdf specifies: in order for pstricks
@@ -148,22 +145,31 @@ P  0x003C
 %% Incidentally, especially in TL, more than one dvipdfmx.cfg may be
 %% extant.  You can find the one that is active by running:
 %% kpsewhich -progname=dvipdfmx -format='other text files' dvipdfmx.cfg
+%% and control which one is found by setting DVIPDFMXINPUTS.
 %%
-D  "rungs -q -dNOPAUSE -dBATCH -sPAPERSIZE=a0 -sDEVICE=pdfwrite -dCompatibilityLevel=%v -dAutoFilterGrayImages=false -dGrayImageFilter=/FlateEncode -dAutoFilterColorImages=false -dColorImageFilter=/FlateEncode -sOutputFile='%o' '%i' -c quit"
+D  "rungs -q -dNOPAUSE -dBATCH -dEPSCrop -sDEVICE=pdfwrite -dCompatibilityLevel=%v -dAutoFilterGrayImages=false -dGrayImageFilter=/FlateEncode -dAutoFilterColorImages=false -dColorImageFilter=/FlateEncode -sOutputFile='%o' '%i' -c quit"
 
+% pre-2013 invocation using -sPAPERSIZE instead of -dEPSCrop, no other changes:
+%D  "rungs -q -dNOPAUSE -dBATCH -sPAPERSIZE=a0 -sDEVICE=pdfwrite -dCompatibilityLevel=%v -dAutoFilterGrayImages=false -dGrayImageFilter=/FlateEncode -dAutoFilterColorImages=false -dColorImageFilter=/FlateEncode -sOutputFile='%o' '%i' -c quit"
+
+% other random ps converters people have experimented with.
+%D "/usr/local/bin/ps2pdf -dEPSCrop '%i' '%o'"
+%D "/usr/texbin/epstopdf '%i' -o '%o'"
+%D "/usr/bin/pstopdf '%i' -o '%o'"
+%
 %% Frank Siegert's PStill:
 %D  "/usr/local/bin/pstill -c -o '%o' '%i'"
-
+%
 %% Batik + Fop (SVG-to-PDF):
 %% If you want both PS and SVG, you need to write a script or program
 %% that selectively invokes converters.
 %D  "java -classpath classpaths -jar /path/to/batik-rasterizer.jar -m application/pdf -d '%o' '%i'"
-
+%
 %% There are no way to directly know suggested size of (raster) images.
 %% You may want to use %b here, since you can try reading the ebb file
 %% to see what is natural (physical) size of images. 
 %D  "ras2pdf -r 300x300 -b '%b.bb' -o '%o' '%i'"
-
+%
 %% ImageMagick:
 %% Easiest way to support various file formats.
 %D  "convert '%i' 'epdf:%o'"
@@ -187,7 +193,7 @@ D  "rungs -q -dNOPAUSE -dBATCH -sPAPERSIZE=a0 -sDEVICE=pdfwrite -dCompatibilityL
 %% Image cache life in hours
 %%  0 means erase all old images and leave new images
 %% -1 means erase all old images and also erase new images
-%I 48
+%I -1
 
 %% Font Map Files
 %%
@@ -207,7 +213,6 @@ f  pdftex.map
 % the following file is generated by updmap(-sys) from the 
 % KanjiMap entries in the updmap.cfg file.
 f kanjix.map
-
 % minimal example for Chinese and Korean users
 % improvements please to tex-live@tug.org
 f ckx.map
